[project]
name = "holo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mediapipe>=0.10.21",
    "moderngl>=5.12.0",
    "moderngl-window>=3.1.1",
    "numpy>=1.26.4",
    "opencv-python>=4.11.0.86",
    "pyrr>=0.10.3",
]
