[project]
name = "holo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mediapipe>=0.10.21",
    "moderngl>=5.12.0",
    "moderngl-window>=3.1.1",
    "numpy>=1.26.4",
    "openai-whisper>=20250625",
    "opencv-python>=4.11.0.86",
    "pyaudio>=0.2.14",
    "pyglet>=2.1.8",
    "pyqt5>=5.15.11",
    "pyrr>=0.10.3",
    "python-dotenv>=1.1.1",
    "pyttsx3>=2.99",
    "requests>=2.32.5",
    "sounddevice>=0.5.2",
    "soundfile>=0.13.1",
    "speechrecognition>=3.14.3",
]
